# crowcpp-shoespotter

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/: compare.h  compute.h  database.h  database_features.h  database_shoes.h  evaluate.h  service.h  utils.h
